--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - INFLUX_TOKEN=mytoken
       - INFLUX_ORG=MyOrg
       - INFLUX_BUCKET=health_data
+      - ENV=dev
     volumes:
       - ./app:/app
     depends_on:
